[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/defaults/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://client/menus/lobby/servermenu.gd" type="Script" id=2]

[sub_resource type="InputEventAction" id=1]
action = "ui_cancel"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="ServerMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_right = 1240.0
margin_bottom = 639.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="List" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1240.0
size_flags_horizontal = 3

[node name="Footer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 643.0
margin_right = 1240.0
margin_bottom = 680.0

[node name="Leave" type="Button" parent="VBoxContainer/Footer"]
margin_right = 180.0
margin_bottom = 37.0
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
text = "MENU_LABEL_BACK"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Footer"]
margin_left = 184.0
margin_right = 966.0
margin_bottom = 37.0
size_flags_horizontal = 3
alignment = 1

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Footer/HBoxContainer"]
margin_left = 226.0
margin_right = 306.0
margin_bottom = 37.0

[node name="Join" type="Button" parent="VBoxContainer/Footer/HBoxContainer"]
margin_left = 310.0
margin_right = 555.0
margin_bottom = 37.0
text = "MENU_LABEL_LOBBY_JOIN"

[node name="Create" type="Button" parent="VBoxContainer/Footer"]
margin_left = 970.0
margin_right = 1240.0
margin_bottom = 37.0
text = "MENU_LABEL_LOBBY_CREATE"

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="VBoxContainer/Footer/Leave" to="." method="_on_Leave_pressed"]
[connection signal="pressed" from="VBoxContainer/Footer/HBoxContainer/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="VBoxContainer/Footer/Create" to="." method="_on_lobby_create"]
[connection signal="timeout" from="Timer" to="." method="refresh"]
